# kodosumi-vibe-template

./: .cursor.json  .cursorignore  .cursorrules  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  UPGRADE.md  config.yaml  install.bat  install.sh  pyproject.toml  requirements.txt  setup.py
.cursor/rules/: crews.mdc  flow.mdc  frameworks.mdc  general.mdc  html.mdc  installation.mdc  kodosumi.mdc  testing.mdc  workflows.mdc
docs/: deployment.md  installation.md  troubleshooting.md
docs/development/: guide.md
docs/ray/: overview.md
docs/reference/: common_utilities.md  crewai_flow.md
examples/ray/: README.md  ray_actor_model.py  ray_parallel_test.py  ray_test.py  run_all_examples.py
tests/: __init__.py  test_basic.py  test_data.py  test_first_crew.py  test_formatters.py  test_processors.py  test_utils.py
tests/common/: test_data.py  test_formatters.py  test_logging_utils.py  test_processors.py  test_utils.py
tests/tools/: __init__.py
tests/tools/exa_search/: __init__.py  test_tool.py
tests/workflows/crewai_flow/: test_first_crew.py
tests/workflows/example/: test_basic.py  test_first_crew.py
tests/workflows/hypothesis_generator/: test_basic.py  test_integration.py
workflows/: README.md
workflows/common/: README.md  __init__.py  data.py  formatters.py  logging_utils.py  processors.py  utils.py
workflows/crewai_flow/: README.md  data.py  main.py  processors.py  serve.py  utils.py
workflows/crewai_flow/crews/first_crew/: first_crew.py
workflows/crewai_flow/crews/first_crew/config/: tasks.yaml
workflows/crewai_flow/templates/: _base.html  form.html
workflows/crewai_flow/tools/: example_tool.py
workflows/example/: README.md  formatters.py  main.py  processors.py  serve.py
workflows/example/crews/first_crew/: first_crew.py
workflows/example/crews/first_crew/config/: agents.yaml
workflows/example/templates/: _base.html  form.html
workflows/hypothesis_generator/: main.py  serve.py
workflows/hypothesis_generator/crews/hypothesis_crew/: hypothesis_crew.py
workflows/hypothesis_generator/crews/hypothesis_crew/config/: agents.yaml  tasks.yaml
workflows/hypothesis_generator/templates/: _base.html  form.html
workflows/ray_testing/: README.md  __init__.py  main.py  ray_tests.py  serve.py
workflows/ray_testing/templates/: _base.html  form.html
workflows/tools/: README.md  __init__.py
workflows/tools/exa_search/: README.md  __init__.py  crewai_example.py  example.py  standalone.py  tool.py
